mn-wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mn-wordpress
spec:
  type: NodePort
  ports:
   - nodePort: 30180
     port: 80
     targetPort: 80
  selector:
    app: mn-wordpress
